# vulkan-triangle-example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_shaders.sh  build_shaders_macos.sh  first_app.cpp  first_app.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  lve_buffer.cpp  lve_buffer.h  lve_camera.cpp  lve_camera.h  lve_device.cpp  lve_device.h  lve_frame_info.h  lve_game_object.h  lve_glfw_input_source.cpp  lve_glfw_input_source.h  lve_input_source.cpp  lve_input_source.h  lve_model.cpp  lve_model.h  lve_nativewindow.h  lve_pipeline.cpp  lve_pipeline.h  lve_render.h  lve_renderer.cpp  lve_swap_chain.cpp  lve_swap_chain.h  lve_utils.h  lve_window.cpp  lve_window.h  lve_windowfactory.h  main.cpp  run-dev.sh  run.sh  (+3 more)
cmake/: utils.cmake
scripts/: install-deps-fedora.sh
shaders/: simple_shader.frag  simple_shader.vert
